--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,40 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: 'Roboto', 'Helventica', 'Arial', 'sans-serif';
+}
+
+.button-1, .button-find {
+  padding: 1.1rem 1.2rem;
+  background-color: #ec5252;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.5rem;
+  border: 1px solid #fff;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.button-1:hover, .button-find:hover {
+  background-color: #992337;
+}
+
+.button-find {
+  background-color: #fff;
+  color: #ec5252;
+}
+
+.button-find:hover {
+  background-color: #ec5252;
+  color: #fff;
+}
+/*# sourceMappingURL=main.css.map */
