--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,5 +3,7 @@
 
 @import 'helpers/variables';
 @import 'helpers/functions';
+@import 'helpers/placeholders';
 
 @import './components/buttons';
+@import './components/carousel';
