--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,15 @@ body {
   font-family: 'Roboto', 'Helventica', 'Arial', 'sans-serif';
 }
 
+.button-1, .button-find, .course-item__title p, .course-item__prices span:last-child {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
 .button-1, .button-find {
   padding: 1.1rem 1.2rem;
   background-color: #ec5252;
   color: #fff;
-  font-weight: 700;
-  font-size: 1.5rem;
   border: 1px solid #fff;
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
@@ -36,5 +39,86 @@ body {
 .button-find:hover {
   background-color: #ec5252;
   color: #fff;
+}
+
+.course-item {
+  width: 200px;
+}
+
+.course-item__bottom {
+  padding: 1.5rem 1rem 0 1.5rem;
+}
+
+.course-item__title {
+  width: 150px;
+  margin-bottom: 15px;
+}
+
+.course-item__title p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 4.2rem;
+}
+
+.course-item__title span {
+  color: "";
+}
+
+.course-item__rated {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+.course-item__rated h4 {
+  margin: 0 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #505763;
+}
+
+.course-item__rated span {
+  font-size: 1.2rem;
+  color: #686f7a;
+}
+
+.course-item__star {
+  color: #f4c150;
+  font-size: 1.2rem;
+}
+
+.course-item__prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.course-item__prices span:first-child {
+  font-size: 1.3rem;
+  text-decoration: line-through;
+  margin-right: 10px;
+}
+
+.course-item__prices span:last-child {
+  font-size: 1.8rem;
+  margin-right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
