--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -3,9 +3,11 @@ $colors: (
     dark-red: rgb(153, 35, 55),
     white: #fff,
     black: #000,
-    grey: rgb(104, 111, 122),
-    light-grey: rgb(222, 223, 224),
+    light-black: rgb(80, 87, 99),
+    light-grey: rgb(104, 111, 122),
+    lighter-grey: rgb(222, 223, 224),
     dark-blue: rgb(0, 119, 145),
+    yellow-orange: rgb(244, 193, 80),
 );
 
 $font-sizes :(
@@ -27,9 +29,9 @@ $paddings : (
 );
 
 $margins: (
-    m-1: 10,
-    m-2 :15,
-    m-3: 20,
+    m-1: 10px,
+    m-2 :15px,
+    m-3: 20px,
 );
 
 $font-weights : (
