--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -12,6 +12,7 @@ $colors: (
 
 $font-sizes :(
     fz-1: 1.2rem,
+    fz-7: 1.3rem,
     fz-2: 1.5rem,
     fz-3: 1.8rem,
     fz-4: 2rem,
@@ -29,9 +30,10 @@ $paddings : (
 );
 
 $margins: (
-    m-1: 10px,
-    m-2 :15px,
-    m-3: 20px,
+    m-1: 1rem,
+    m-2 :1.5rem,
+    m-3 : 1.8rem,
+    m-4: 2rem,
 );
 
 $font-weights : (
