--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,5 @@
 @import './components/buttons';
 @import './components/carousel';
 @import './components/panel';
+@import './components/cards';
+@import './components/dropdowns';
