--- a/sass/components/_panel.scss
+++ b/sass/components/_panel.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     border: 1px solid #EEE;
-    box-shadow: 1px 1px 1px 1px #888;
+    box-shadow: 1px 1px 1px #999;
 
     i {
         font-size: fz(fz-6);
