--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -4,6 +4,7 @@ $colors: (
     white: #fff,
     black: #000,
     light-black: rgb(80, 87, 99),
+    grey-0: rgba(20, 23, 28, 0.05),
     light-grey: rgb(104, 111, 122),
     lighter-grey: rgb(222, 223, 224),
     dark-blue: rgb(0, 119, 145),
