--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -2,6 +2,7 @@
     width: 240px;
     border: 1px solid #DDD;
     box-shadow: 0 3px 3px #AAA;
+    padding-bottom: 15px;
     img {
         width: 100%;
     }
